Cuadrado y triangulo check

--- a/Ejemplos-Practicos/CalculadoraFiguras/Figuras.html
+++ b/Ejemplos-Practicos/CalculadoraFiguras/Figuras.html
@@ -15,15 +15,65 @@
       <div class="figura">
         <section>
           <h4>Cuadrado</h4>
-          <div class="card">algo</div>
+          <div class="card">
+            Calculo de area y perimetro
+            <form id="formCuadrado">
+              <label for="inputCuadrado"> Escribe los lados del cuadrado</label>
+              <input id="inputCuadrado" type="number" />
+              <div class="botones">
+                <button type="button" onclick="calcularPerimeterCuadrado()">
+                  Calcular perimetro
+                </button>
+                <button type="button" onclick="calcularAreaCuadrado()">
+                  Calcular Area
+                </button>
+              </div>
+            </form>
+          </div>
         </section>
       </div>
       <div class="figura">
-        <section><h4>Triangulo</h4><div class="card">algo</div></section>
+        <section>
+          <h4>Triangulo</h4>
+          <div class="card">
+            Calculo de area y perimetro
+            <form id="formTriangulo">
+              <div class="orden">
+                <label for="inputTriangulo">
+                  Escribe el lado 1 del triangulo</label
+                >
+                <input id="inputTriangulo" type="number" />
+              </div>
+              <div class="orden">
+                <label for="inputTriangulo1">
+                  Escribe el lado 2 del triangulo</label
+                >
+                <input id="inputTriangulo1" type="number" />
+              </div>
+              <div class="orden">
+                <label for="inputTriangulo2">
+                  Escribe la base del triangulo</label
+                >
+                <input id="inputTriangulo2" type="number" />
+              </div>
+
+              <div class="botones">
+                <button type="button" onclick="calcularPerimetroTriangulo()">
+                  Calcular perimetro
+                </button>
+                <button type="button" onclick="calcularAreaTriangulo()">
+                  Calcular Area
+                </button>
+              </div>
+            </form>
+          </div>
+        </section>
       </div>
-      <div class="figura"><section>
-        <h4>Circulo</h4><div class="card">algo</div>
-        
+      <div class="figura">
+        <section>
+          <h4>Circulo</h4>
+          <div class="card">Calculo de area y perimetro</div>
+        </section>
       </div>
     </div>
 
