--- a/Ejemplos-Practicos/SorpresaAleja/index.html
+++ b/Ejemplos-Practicos/SorpresaAleja/index.html
@@ -26,6 +26,20 @@
           </div>
         </form>
       </section>
+      <section>
+        <h2>Es para ti amor</h2>
+      </section>
+      <section>
+        <iframe
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/playlist/4Mu2kOsWhzLITt8S4tHbJw?utm_source=generator&theme=0"
+          width="100%"
+          height="380"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+        ></iframe>
+      </section>
     </div>
     <script src="index.js"></script>
   </body>
