--- a/Ejemplos-Practicos/SorpresaAleja/index.html
+++ b/Ejemplos-Practicos/SorpresaAleja/index.html
@@ -40,6 +40,9 @@
           allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
         ></iframe>
       </section>
+      <section>
+        <a href="./Gallery.html">Nuestra galeria</a>
+      </section>
     </div>
     <script src="index.js"></script>
   </body>
