--- a/Ejemplos-Practicos/SorpresaAleja/Gallery.html
+++ b/Ejemplos-Practicos/SorpresaAleja/Gallery.html
@@ -14,7 +14,22 @@
     </section>
 
     <section>
-      <img src="./assets/LoveYou.png" alt="Smiley face" />
+      <img src="./assets/LoveYou.png" alt="Love you" />
+    </section>
+    <section>
+      <img src="./assets/Nuestrra PrimeraFoto.jpeg" alt="Primera Foto" />
+    </section>
+    <section>
+      <img src="./assets/Jacuzzi.jpeg" alt="Jacuzzi" />
+    </section>
+    <section>
+      <img src="./assets/SecretCard.png" alt="SecretCard" />
+    </section>
+    <section>
+      <img src="./assets/TeQuieroAmor.jpeg" alt="TeQuieroAmor" />
+    </section>
+    <section>
+      <img src="./assets/TeDAPax.jpeg" alt="TeDAPax" />
     </section>
   </body>
 </html>
