--- a/Ejemplos-Practicos/SorpresaAleja/Gallery.html
+++ b/Ejemplos-Practicos/SorpresaAleja/Gallery.html
@@ -13,6 +13,9 @@
       <h2>Aqui estaran todas nuestras fotos juntos, para nuestros recuerdos</h2>
     </section>
     <section>
+      <img src="./assets/MissingU.png" alt="Love you" />
+    </section>
+    <section>
       <img src="./assets/LoveYou.png" alt="Love you" />
     </section>
     <section>
